# Algorithms

./: .clang-format  .gitignore  .highlightTest.cpp.swp  Algorithms.cbp  Algorithms.code-workspace  Algorithms.depend  Algorithms.dev  Algorithms.layout  CLEnv.sln  CMakeLists.txt  CMakePresets.json  LICENSE  MakeFile  README.md  envpath  format  highlightTest.cpp  main.cpp  solution.h
.github/workflows/: unit_test.yml
.obsidian/: hotkeys.json  workspace.json
BoostGrammar/: helloBoost.cpp
CGrammarAttributes/: ValueFormat.cpp
CLEnv/: CLEnv.vcxproj
CLEnv/Datastruct/Graph/: GraphAlgorithms.emmx  GraphPresentation.pptx
CLEnv/Datastruct/Tree/: BST_oop.cpp
CodeBlocksEnv/: Algorithms.cbp  Algorithms.layout
CodeForces/: Seniorious.cpp
DP/: Binary1Count.cc  MatrixPrefixSum.cc  inTraverseDelete.cc
DP/Knapsack/: Naive.cc  Regular.cc  SplitANumber.cc  ValueBasePack.cc
DP/Sequence/: LCS.cc  LCSS.cc  LIS.cc  Lowbit.cc  Palindrome.cc
DP/Stock/: Trade.cc
Datastruct/Graph/: GraphAlgorithms.md
Datastruct/Graph/APSP/: FloydWarshall.cpp
Datastruct/Graph/DAG/: TopologialSort.cpp
Datastruct/Graph/MST/: Kruskal.cpp
Datastruct/Graph/Property/: GraphDs_edge.cpp  GraphDs_node.cpp
Datastruct/Graph/SSSP/: BFS_SPFA.cpp  BFS_SPFA_SLF_LLF.cpp  BellmanFord.cpp  DFS_SPFA.cpp  Dijikstra.cpp  Dijikstra_UCG.cpp  SPFA.cpp
Datastruct/HashTable/: Dockerfile  u_mapVsArray.cc
Datastruct/String/KMP/: KMPPPPP.cpp  KMP_Recrsive.cpp  SimpleKMP.cpp  aGlimpseOfKMP.cpp  code.cpp  kmp.cpp  statisticsOfKMP.cpp
Datastruct/Tree/: AVL.cc  AVL.cpp  AVL.hpp  AVL_Iterative.cc  AVL_Iterative.cpp  AVL_Iterative.hpp  AVL_Test.cc  BST_oop.cpp  BST_oop_bad.cpp  BST_pop.cpp  BST_pop_bad.cpp  Heap.cpp
Datastruct/Tree/SegmentalTree/: InOrder.cpp
Datastruct/Tree/TreeTraversal/: Postorder_Inorder.cc  Preorder_Inorder.cc
DesignPattern/: helo.cc  main.cc
DesignPatterns/: README.md
DesignPatterns/Introduction/: CRTP.cc  Liskov.cc  Mixin.cc  VirualInherit.cc
DesignPatterns/Practice/: PointerHandler.cc  README.md
DesignPatterns/StructureDesignPattern/Decorator/: Logger.cc  NeatDecorator.cc  TupleArgs.cc
Envs/CLEnv/: CLEnv.vcxproj.filters  resource.h
HammingCode/: HammingCodeSrv-Optimized.cpp  HammingCodeSrv.cpp  tempCodeRunnerFile.cpp
LeetCode/: 1976.cpp  1976_Dijikstra_PriorityQue.cpp  1976_Dijikstra_PriorityQue_BFS.cpp  2045.cpp  2045.h  2045AStar.h  2045AStarLogic.h  grapher.cpp  input.txt  relation.md
LeetCode/1976/: 1976_BF.cpp  1976_Dijikstra_PriorityQue_BFS.cpp
LibGrammar/CGrammarAttributes/: CallAssembly.cpp
LibGrammar/OpenCVEnv/: main.cpp  solution.cpp
LibGrammar/STL/: dictOrder.cc
Math/EuclidDivide_GCD/: gcd.ipynb  gcdLcd.cc
Math/HammingCode/: HammingCode.md  HammingCodeBasis.md  HammingCodeSrv-Optimized.cpp
OpenCVEnv/: main.cpp  solution.cpp
ProblemSets/CodeForces/1000/: Chat_room.cpp  Dragons.cpp  Two_Binary_Strings.cpp  hack.cpp
ProblemSets/CodeForces/800/: OlyaAndGameWithArrays.cpp  Team.cpp  WayTooLongWords.cpp  watermelon.cpp
ProblemSets/CodeForces/900/: HQ9+.cpp  Twins.cpp  evenodds.cpp  football.cpp
ProblemSets/CodeForces/EFR176/: A.cc
ProblemSets/HJ/: HJ18.cc  HJ3.cc
ProblemSets/LeetCode/: 138.cc  1976_Dijikstra_PriorityQue_BFS.cc  1976_Dijikstra_PriorityQue_VisitedFilter.cc  1976_Distance_Filter_DP.cc  1976_Distance_Filter_PerPath.cc  1977.cc  2045.cpp  2045AStar.h  2045AStarLogic.h  2045AStarTest.cpp  2045BFS.cc  2045DP.cc  2045Test.cpp  407.cc  45.cc  714.cc  797Submit.cc  StockLinear.java
ProblemSets/Niuke/: HJ76.java  LuckyString.cc
ProblemSets/Review/: DijkstraOptimization.md  README.md  Summary.md
Search/: AVL.cc  AVL.hpp  AbstractBST.hpp  BFS.cpp  BST.cc  BST.hpp  BTree.cc  DFS.cpp  KMP.cc  RBT.cc  RBT.hpp  Sequence.cc
Sort/: External.cc  External.md  Heap_PriorityQueue  Heap_PriorityQueue.cpp  Heap_PriorityQueue.md  Sort.cc
TestFiles/: Assembly.cpp  CppVersion.cpp
(+101 files in other folders)
